# drogonlibsys

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  openapi.yaml  xmake.lua
backend/config/: config.docker.json  config.json
backend/csrc/: password_hash.c
backend/sql/: init.sql
backend/src/: main.cc
backend/src/controllers/: AuthController.cc  AuthController.h  BookController.cc  BookController.h  LoanController.cc  LoanController.h  OpenApiController.cc  OpenApiController.h  SearchController.cc  UserController.h  (+2 more)
backend/tests/: test_main.cpp  test_password_hash.cpp
frontend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  nginx.conf  skills-lock.json
frontend/.agents/skills/dioxus-component-dev/: SKILL.md
frontend/.agents/skills/dioxus-component-dev/agents/: openai.yaml
frontend/.agents/skills/dioxus-fullstack-dev/: SKILL.md
frontend/.agents/skills/dioxus-project-setup/: SKILL.md
frontend/.agents/skills/dioxus-project-setup/agents/: openai.yaml
frontend/.agents/skills/dioxus-routing/: SKILL.md
frontend/.agents/skills/dioxus-routing/agents/: openai.yaml
frontend/.agents/skills/dioxus-state-management/: SKILL.md
frontend/.agents/skills/skill-installer/: SKILL.md
frontend/assets/: tailwind.css
frontend/src/: api.rs  auth.rs  components.rs  layout.rs  main.rs  routes.rs
frontend/src/pages/: admin_books.rs  admin_users.rs  book_detail.rs  book_edit.rs  book_new.rs  books.rs  loan_detail.rs  loan_new.rs  loans.rs  login.rs  mod.rs  not_found.rs  search.rs
(+34 files in other folders)
